WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
224205
[PlayStation] Fix build of DiagnosticLoggingDomain.h
https://bugs.webkit.org/show_bug.cgi?id=224205
Summary
[PlayStation] Fix build of DiagnosticLoggingDomain.h
Stephan Szabo
Reported
2021-04-05 14:27:22 PDT
This looks to be a unified build type issue, complaining about EnumTraits. Looks like other files do just include wtf/EnumTraits.h.
Attachments
Patch
(1.00 KB, patch)
2021-04-05 14:33 PDT
,
Stephan Szabo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Stephan Szabo
Comment 1
2021-04-05 14:33:24 PDT
Created
attachment 425207
[details]
Patch
EWS
Comment 2
2021-04-06 08:42:03 PDT
Committed
r275518
: <
https://commits.webkit.org/r275518
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 425207
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-04-06 08:43:13 PDT
<
rdar://problem/76268328
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug