[PlayStation] Fix build of DiagnosticLoggingDomain.h https://bugs.webkit.org/show_bug.cgi?id=224205

Reviewed by Don Olmstead.

No new tests, build fix only.

* page/DiagnosticLoggingDomain.h: Include wtf/EnumTraits.h


Canonical link: https://commits.webkit.org/236175@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@275518 268f45cc-cd09-0410-ab3c-d52691b4dbfc