Source/WebCore/page/DiagnosticLoggingDomain.h
@@ -25,6 +25,8 @@
 
 #pragma once
 
+#include <wtf/EnumTraits.h>
+
 namespace WebCore {
 
 enum class DiagnosticLoggingDomain : uint8_t { Media };
